1999-11-19  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: move aborted_data_sock along with control_sock.

1999-11-16  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: don't decrease sync_wait on 1xx replies.

1999-11-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: (ExtractPWD) don't return alloca'ed space, strdup it.

1999-11-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h: (SuspendJob) new method; (PrintStatus)
	  don't print all queued commands if not verbose, print current
	  queue command status if ^Z (v==0).

1999-11-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: add site_chmod_supported flag.

1999-11-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: properly set info.size and info.time if mdtm or size
	  are not supported.
	* FtpListInfo.cc: fix infinite loop on bad symlinks.

1999-11-07  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: allow moving a connection with buffered
	  data or expected responses; (sync_wait) new member for number of
	  commands in flight.

1999-11-04  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: (RereadManual) new method to stop
	  the driver wasting data when REST is not supported;
	  (norest_manual) new member; (device_prefix_len) new protected method;
	  use it in Chdir.
	* FtpGlob.cc: implement files_only.
	* FtpSplitList.cc, HttpDir.cc: use RereadManual.
	* Http.cc: support norest_manual.
	* ascii_ctype.h: add to_ascii_lower.
	* buffer.cc, buffer.h: (Empty) new method.
	* complete.cc: use DirectoriesOnly for `cd' command.
	* ftpclass.cc, ftpclass.h: better support for vms; remember that
	  MDTM or SIZE is not supported; implement ftp:rest-stor setting;
	  add closure to ftp:rest-list setting.
	* resource.cc: ftp:rest-stor setting.

1999-11-02  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, FtpGlob.cc, FtpGlob.h, FtpListInfo.cc,