@@ -1,6 +1,7 @@
 1999-11-19  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* ftpclass.cc: move aborted_data_sock along with control_sock.
+	* FtpGlob.cc: make sure to restore old cwd.
 
 1999-11-16  Alexander V. Lukyanov  <lav@yars.free.net>
 
